dhall/tests/import/failure/cycle.txt
Type error: error: error
 --> <current file>:1:1
  |
1 | ../data/cycle.dhall
  | ^^^^^^^^^^^^^^^^^^^ Type error: error: error
 --> <current file>:1:1
  |
1 | ../failure/cycle.dhall
  | ^^^^^^^^^^^^^^^^^^^^^^ Type error: error: error
 --> <current file>:1:1
  |
1 | ../data/cycle.dhall
  | ^^^^^^^^^^^^^^^^^^^ ImportCycle([ImportLocation { kind: Local("./dhall-lang/tests/import/data/cycle.dhall") }, ImportLocation { kind: Local("./dhall-lang/tests/import/failure/cycle.dhall") }], ImportLocation { kind: Local("./dhall-lang/tests/import/data/cycle.dhall") })
  |
  |
  |
